[tool.poetry]
name = "konectu-contexts-cache"
version = "0.0.1"
description = "Context for konectu able to cache and proxy to LLM and MM LLM designed to save up tokens and make model calls deterministic"
authors = ["konectu-ai"]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: Apache Software License",
]
keywords = ["LAM", "action", "automation", "LLM", "NLP", "RAG", "selenium", "playwright"]
homepage = "https://konectu.ai"
repository = "https://github.com/konectu-ai/konectu/"
documentation = "https://docs.konectu.ai/en/latest/"
packages = [{include = "konectu/"}]

[tool.poetry.dependencies]
python = "^3.10.0"
konectu-core = "^0.2.33"
pyyaml = "^6.0.1"
ImageHash = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
