[tool.poetry]
name = "konectu-drivers-selenium"
version = "0.2.15"
description = "Selenium integration for konectu"
authors = ["konectu-ai"]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: Apache Software License",
]
keywords = ["LAM", "action", "automation", "LLM", "NLP", "RAG", "selenium", "selenium"]
homepage = "https://konectu.ai"
repository = "https://github.com/konectu-ai/konectu/"
documentation = "https://docs.konectu.ai/en/latest/"
packages = [{include = "konectu/"}]

[tool.poetry.dependencies]
python = "^3.10.0"
konectu-core = "^0.2.26"
selenium = "^4.18.1"
PyYAML = ">=5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
